2005-09-30  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c: Slowed the timing down for the
	IOBARRIER.  Now, we're using the slowest timing because that's all
	that seems to work.
 
	* src/arch-arm/entry/sdramboot.c (sdramboot_report): Unified
	support for reporting when APEX is booted from SDRAM.  While only
	informational, this will help explain to new users the difference
	between booting from flash or SRAM and from SDRAM. 

2005-09-29  Marc Singer  <elf@buici.com>

	* src/apex/env.c: Updated autoboot cancellation message to be more
	correct.  Only ^C cancels now.

2005-09-28  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/Makefile: architecture and tune features.  This
	fixes a build problem with native compilers. 

	* src/arch-arm/Kconfig: New configuration features to select the
	right architecture.  Lack of this was the source of a nasty build
	error having to do with the fact that the default CPU type on ARM
	doesn't support the half-word load.

2005-09-27  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/apex.lds.S: Enlarged the stacks.  We were
	crashing from a stack overflow in the jffs2 decompression path.

	* src/lib/zlib.c: Changes so that we can use the debug option.

	* src/drivers/drv-jffs2.c (jffs2_load_cache): Fixed bug in jffs2
	filesystem cache.  Cancelled cache operation which was restarted
	would create duplicate entries in the cache.

2005-09-18  Marc Singer  <elf@buici.com>

	* include/attributes.h (__xbss): New attribute macro for easy xbss
	spec.

2005-09-15  Marc Singer  <elf@buici.com>

	* src/lib/env.c (_env_check_magic): Modified the environment check
	before writing to look for a large block of 0xff's before
	declaring the area blank.

2005-09-02  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/apex.lds.S: Needed to set the xbss section to
	NOLOAD so that the loader image wouldn't bloat with BSS areas

2005-08-22  Marc Singer  <elf@buici.com>
