@@ -1,0 +1,34 @@
+/* strcpy.c
+
+   refer to string.c for the copyright and notes.
+
+ */
+
+#define IN_STRING_C 1
+ 
+#include <linux/types.h>
+#include <linux/string.h>
+#include <linux/ctype.h>
+#include <linux/module.h>
+
+#define BUG_ON(v)
+/**
+ * memset - Fill a region of memory with the given value
+ * @s: Pointer to the start of the area.
+ * @c: The byte to fill the area with
+ * @count: The size of the area.
+ *
+ * Do not use memset() to access IO space, use memset_io() instead.
+ */
+
+#undef memset
+void * memset(void * s,int c,size_t count)
+{
+	char *xs = (char *) s;
+ 
+	while (count--)
+		*xs++ = c;
+
+	return s;
+}
+EXPORT_SYMBOL(memset);
